# rdf-to-ngsi-ld

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
helm/: Chart.yaml  values.yaml
helm/templates/: deployment.yaml
rdf_to_ngsi_ld/: translator.py
