[tool.poetry]
name = "rdf-to-ngsi-ld"
version = "1.3.0"
description = ""
authors = ["Ignacio Dominguez Martinez-Casanueva <ignacio.dominguezmartinez@telefonica.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
ngsi-ld-client = {git = "https://github.com/giros-dit/python-ngsi-ld-client.git", rev = "1.6.1"}
kafka-python = "^2.0.2"
rdflib = "^7.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
